plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'
description = 'AP-exams'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    runtimeOnly 'org.postgresql:postgresql'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    implementation 'me.paulschwarz:spring-dotenv:4.0.0'

    implementation 'com.sendgrid:sendgrid-java:4.10.3'

    // Source: https://mvnrepository.com/artifact/be.codewriter/lemonsqueezy-java
    implementation("be.codewriter:lemonsqueezy-java:1.0.0")

    // Rate limiting with Bucket4j
    implementation 'com.bucket4j:bucket4j-core:8.10.1'

    // Для Redis с Lettuce (официальное расширение Bucket4j)
    implementation 'com.bucket4j:bucket4j-redis:8.10.1'

    // SLF4J MDC for Request ID
    implementation 'org.slf4j:slf4j-api:2.0.9'

    // Swagger/OpenAPI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
}


tasks.named('test') {
    useJUnitPlatform()
}
